--- a/aws-route53-alb-infrastructure/.github/workflows/cicd-pipeline.yml
+++ b/aws-route53-alb-infrastructure/.github/workflows/cicd-pipeline.yml
@@ -3,6 +3,7 @@ name: Multi-Region CI/CD Pipeline
 on:
   push:
     branches: [main]
+    paths: ['aws-route53-alb-infrastructure/**']
   pull_request:
     branches: [main]
 
