--- a/aws-route53-alb-infrastructure/.github/workflows/cicd-pipeline.yml
+++ b/aws-route53-alb-infrastructure/.github/workflows/cicd-pipeline.yml
@@ -15,6 +15,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - uses: actions/checkout@v5
       
@@ -30,6 +31,7 @@ jobs:
   deploy-primary:
     needs: test
     runs-on: ubuntu-latest
+    environment: dev
     if: github.ref == 'refs/heads/main'
     outputs:
       hosted-zone-id: ${{ steps.deploy.outputs.hosted-zone-id }}
